--- a/src/main/resources/templates/epidemic/eperson/showRelation.html
+++ b/src/main/resources/templates/epidemic/eperson/showRelation.html
@@ -100,7 +100,7 @@
                 },
                 {
                     field: 'confirmd',
-                    title: '是否确诊',
+                    title: '病例类型',
                     formatter: function(value, row, index) {
                         return $.table.selectDictLabel(confirmdDatas, value);
                     }
