--- a/src/main/resources/templates/main_map.html
+++ b/src/main/resources/templates/main_map.html
@@ -204,7 +204,7 @@
                         var content = "<h4 style='color:#CC5522;font-size:14px;margin:0 0 5px 0;padding:0.2em 0'>" + rylist[i].name + "</h4>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>性别："+rylist[i].gender+"</p>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>年龄："+rylist[i].age+"</p>"+
-                            "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>是否确诊: "+rylist[i].confirmd+"</p>"+
+                            "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>病例类型: "+rylist[i].confirmd+"</p>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>户籍地: "+rylist[i].domicile+"</p>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>现住址: "+rylist[i].address+"</p>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>所在社区: "+rylist[i].community+"</p>"+
@@ -213,7 +213,7 @@
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>职业: "+rylist[i].profession+"</p>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>职业（副）: "+rylist[i].profession2+"</p>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>诊断时间（报告卡）: "+rylist[i].reportDiagnosticTime+"</p>"+
-                            "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>关联病历: "+rylist[i].relatedCases+"</p>"+
+                            "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>关联病例: "+rylist[i].relatedCases+"</p>"+
                             "<p style='font:12px arial,sans-serif;margin:0;line-height:1.5;'>初筛阳采样地点: "+rylist[i].firstPositiveSamplePlace+"</p>"+
                             "</div>";
                         addMarkerInfo(marker,content,opts);
