--- a/src/main/resources/templates/epidemic/eperson/add.html
+++ b/src/main/resources/templates/epidemic/eperson/add.html
@@ -34,9 +34,9 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label is-required">身份证号：</label>
+                <label class="col-sm-3 control-label">身份证号：</label>
                 <div class="col-sm-8">
-                    <input name="sfzh" class="form-control" type="text" required>
+                    <input name="sfzh" class="form-control" type="text">
                 </div>
             </div>
             <div class="form-group">
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label is-required">是否确诊：</label>
+                <label class="col-sm-3 control-label is-required">病例类型：</label>
                 <div class="col-sm-8">
                     <select name="confirmd" class="form-control m-b" th:with="type=${@dict.getType('e_confirm')}" required>
                         <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
@@ -78,15 +78,25 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label is-required">病历来源：</label>
+                <label class="col-sm-3 control-label is-required">病例来源：</label>
                 <div class="col-sm-8">
                     <textarea name="casesSource" class="form-control" required></textarea>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">职业：</label>
+                <label class="col-sm-3 control-label is-required">临床严重程度：</label>
                 <div class="col-sm-8">
-                    <textarea name="profession" class="form-control"></textarea>
+                    <select name="confirmd" class="form-control m-b" th:with="type=${@dict.getType('e_clinical')}" required>
+                        <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label is-required">职业：</label>
+                <div class="col-sm-8">
+                    <select name="confirmd" class="form-control m-b" th:with="type=${@dict.getType('e_profession')}" required>
+                        <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
@@ -129,7 +139,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">关联病历：</label>
+                <label class="col-sm-3 control-label">关联病例：</label>
                 <div class="col-sm-8">
                     <textarea name="relatedCases" class="form-control"></textarea>
                 </div>
