--- a/src/main/resources/templates/epidemic/etrack/add.html
+++ b/src/main/resources/templates/epidemic/etrack/add.html
@@ -31,7 +31,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">活动地点：</label>
                 <div class="col-sm-8">
-                    <textarea name="activePlace" class="form-control"></textarea>
+                    <textarea name="activePlace" rows="8" class="form-control"></textarea>
                 </div>
             </div>
             <div class="form-group">    
