--- a/src/main/resources/templates/epidemic/etrack/edit.html
+++ b/src/main/resources/templates/epidemic/etrack/edit.html
@@ -8,6 +8,12 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-track-edit" th:object="${eTrack}">
             <input name="id" th:field="*{id}" type="hidden">
+            <div class="form-group">
+                <label class="col-sm-3 control-label">姓名：</label>
+                <div class="col-sm-8">
+                    <input name="eName" th:field="*{eName}" class="form-control" type="text" readonly>
+                </div>
+            </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label">活动时间：</label>
                 <div class="col-sm-8">
@@ -20,7 +26,7 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">活动地点：</label>
                 <div class="col-sm-8">
-                    <textarea name="activePlace" class="form-control">[[*{activePlace}]]</textarea>
+                    <textarea name="activePlace" rows="8" class="form-control">[[*{activePlace}]]</textarea>
                 </div>
             </div>
             <div class="form-group">    
